# drinli

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  openocd.cfg  requirements.txt
.conan/profiles/: arm-none-eabi-gcc
cmake/: config.cmake.in
cmake/Configuration/: LinkerScript.cmake  LinkerScripts.cmake  MCUs.cmake  ShowConfiguration.cmake  StackSize.cmake
cmake/Modules/: AddFirmware.cmake  ConfigureLinkerScript.cmake  FindSphinx.cmake  GlobComponentSources.cmake  ShowConfiguration.cmake
cmake/Toolchains/: arm-none-eabi-gcc.cmake
docs/: conf.py  index.rst
docs/rom/: api.rst  index.rst  system_control.rst
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/src/: main.cpp
source/bootstrap/: CMakeLists.txt
source/bootstrap/include/bootstrap/: firmware.hpp
source/bootstrap/include/bootstrap/detail/: startup.hpp  symbols.hpp
source/bootstrap/src/: startup.cpp  vectors.cpp
source/cmake/Modules/: AddFirmware.cmake  AddFlashTarget.cmake  CreateBinary.cmake  CreateIntelHex.cmake  ExtractDebugInformation.cmake  LinkerScript.cmake  StackSize.cmake  StripDebugInformation.cmake
source/examples/: CMakeLists.txt
source/examples/src/: blinky.cpp
source/include/base/: entry.hpp  interrupts.hpp  reset.hpp  symbols.hpp
source/include/ti/rom/: api_table.hpp  gpio.hpp  system_control.hpp
source/mcu/: CMakeLists.txt
source/mcu/include/mcu/: gpio.hpp
source/platform/: CMakeLists.txt
source/platform/include/platform/: firmware.hpp  gpio.hpp
source/platform/src/: gpio.cpp
source/platform/src/detail/: firmware.cpp
source/rom/: CMakeLists.txt
source/rom/include/rom/: api.hpp  gpio.hpp  system_control.hpp  version.hpp
source/rom/include/rom/detail/: api_constant.hpp  api_table.hpp
source/scripts/: Stellaris-LM4F120-LaunchPad.ld.in  drinli.ld
source/scripts/mcus/: lm4f120h5qr.ld
source/src/app/: main.cpp
source/src/base/: interrupts.cpp  reset.cpp  vectors.cpp
source/support/: CMakeLists.txt
source/support/include/support/: type_list.hpp
